# test-python-project

./: .gitignore  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
src/test_python_project/: calculator.py  data_violoation.py  registration.py  string_utils.py  user_service.py
tests/: test_calculator.py  test_string_utils.py  test_user_service.py
