[project]
name = "test-python-project"
version = "0.1.0"
description = "A sample Python project with SonarQube integration"
authors = [
    {name = "Test Author",email = "test@example.com"}
]
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["test_python_project"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
